--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -9,31 +9,60 @@
   "theme_color": "#231431",
   "background_color": "#090E16",
   "orientation": "portrait-primary",
+  "screenshots": [
+    {
+      "src": "Logo.png",
+      "sizes": "875x803",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "Logo.png",
+      "sizes": "875x803",
+      "type": "image/png"
+    }
+  ],
   "icons": [
+    {
+      "src": "./logo/android-launchericon-48-48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "./logo/android-launchericon-72-72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "./logo/android-launchericon-96-96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "./logo/android-launchericon-144-144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "./logo/android-launchericon-192-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "./logo/android-launchericon-512-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
     {
       "src": "logo.png",
       "sizes": "875x803",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "./logo/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "./logo/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "./logo/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "./logo/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/x-icon"
+      "type": "image/png"
     }
   ]
 }
