--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -60,7 +60,7 @@
       "purpose": "any"
     },
     {
-      "src": "logo.png",
+      "src": "Logo.png",
       "sizes": "875x803",
       "type": "image/png"
     }
